# rust-rocket

./: Cargo.toml  Dockerfile  Readme.md  service.yaml
migrations/2019-04-25-100522_heroes/: up.sql
src/: db.rs  hero.rs  main.rs  nakal.txt  nakal2.txt
