[package]
name = "rg-price"
version = "0.1.0"
authors = ["maulana <maulanaoktofitriadi@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
# rocket_codegen =  "0.4.0-rc.1"
rocket_codegen = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.3", features = ["serde"] }
diesel = { version = "1.4.2", features = ["mysql"] }
dotenv = "0.13.0"
# diesel_codegen = { version = "0.16.1", features = ["mysql"] }
r2d2 = "*"
r2d2-diesel = "*"
redis = "0.10.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

# [dependencies.diesel_codegen]
